--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
   #
   # The 'docker' hostname is the alias of the service container as described at
   # https://docs.gitlab.com/ee/ci/services/#accessing-the-services.
+  DOCKER_HOST: tcp://docker:2375
   #
   # Specify to Docker where to create the certificates. Docker
   # creates them automatically on boot, and creates
