Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,10 @@ before_script:
 build:
   stage: build
   script:
-    - docker build -t my-docker-image .
-    - docker run my-docker-image /script/to/run/tests
+    - docker build -t honeytreelabs/contact:latest .
+test:
+  stage: test
+  script:
+    # TODO: use build number (variable) in tag of image to allow for parallel builds
+    - docker build -f Dockerfile.ci-test -t honeytreelabs/contact-test:latest .
+    - docker run honeytreelabs/contact-test:latest go test ./...
